# ishtest

./: .gitignore  README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
ish-backend-main/: .dockerignore  .gitignore  .pre-commit-config.yaml  DB_SETUP.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SETUP.md  create_tables.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.sh  test_imports.py
ish-backend-main/alembic/: env.py
ish-backend-main/alembic/versions/: add_chat_invitations.py  add_chat_tables.py  add_company_members_table.py  add_profile_new_fields.py  add_profile_views_count.py  add_saved_jobs_table.py  add_telegram_auth.py  db657ed21eba_initial_migration.py  fix_company_member_role_type.py  normalize_companysize_enum_values.py  normalize_job_enums_lowercase.py  normalize_jobtype_enum_values.py  normalize_userrole_enum_lowercase.py
ish-backend-main/app/: __init__.py  main.py
ish-backend-main/app/api/: dependencies.py
ish-backend-main/app/api/v1/: auth.py  (+8 more)
ish-backend-main/app/constants/: __init__.py  index.py
ish-backend-main/app/core/: __init__.py  config.py  logger.py
ish-backend-main/app/database/: __init__.py  models.py  session.py
ish-backend-main/app/exceptions/: __init__.py  custom_exceptions.py
ish-backend-main/app/repositories/: application_repository.py  chat_repository.py  company_member_repository.py  company_repository.py  invitation_repository.py  job_repository.py  profile_repository.py  saved_job_repository.py  telegram_code_repository.py  user_repository.py
ish-backend-main/tests/: test_users.py
(+116 files in other folders)
